--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/unique_identifier_msgs
-	previous = 
-	base = 1686d1a5bd22
+	previous = 1686d1a5bd22
+	base = 2b59ece1db58
 	trim = 
 	trimbase = 
