--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/unique_identifier_msgs
+	parent = release/rolling/unique_identifier_msgs/2.5.0-2
 	previous = 1686d1a5bd22
 	base = 328a44ad6015
 	trim = 
